2018-02-03 Michael Medin
 * Updated documentation (#513)
 * eventlog: Fixed issue where real-time eventlog message return duplicate results if same log with different case was added
 * NSCA Client: Fixed #511 nsca status can be set with a number from command line
 * filters: show-all will not change if the list is already present: fixes #528
 * Added dockerfiles for debian #537
 * Some linux build fixes
 * Fixed 401 issue with Op5Client
 * corrected spelling

2018-01-18 Michael Medin
 * Fixed some Op5Client issues

2018-01-17 Philipp
 * Fix syntax error for PowerShell wrapper

 2018-01-15 Michael Medin
 * Added hidden to check_tasksched to allow checking of hidden tasks
 * Added tracing and fixed some issues to op5 client
 * Fixed #525 json spirit should be an optional dependency (though a lot of things break without it)

2018-01-08 Michael Medin
 * Possibly fixed #525 json-spirit should not be a required dependancy
 * Fixed #527 infinite recursion with malformed config file
 * Fixed #518 silent installer not applying cli values
 * Fixed so OP5_SERVER et.al. are applied correctly to the installer
 * Added new OP5Client
 * optimized the markdown a bit
 * started to fix debian builds
 * Added http client for mongoose wrapper
 * moved moongose impl behind the c++ wrappers
 * add centreon plugins to docs: ref #512

2017-11-19 Michael Medin
 * REST: Added crude settings API (needs more work before making official)
 * Fixed #435 added support for overriding http verb with X-HTTP-Method-Override
 * Improved error message for 404:s
 * Fixed some issues with enumerating settings keys
 * Removed query from settings protobuf api as it was never used
 * CORE: Fixed listing unloaded modules by name
 * REST: Added POST of modules to upload them
 * REST: Fixed execute_nagios support for plain text putput and fixed return code
 * REST: Fixed segv when parsing privileges
 * WEBServer: Fixed output from nscp web install
 * zip-modules: fixed loading zip-modules without extensions